--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     },
     "keywords": [
         "webrtc",
+        "socket.io",
         "sfu",
         "nodejs",
         "video"
@@ -48,6 +49,7 @@
         "ngrok": "^4.3.3",
         "openai": "^4.20.1",
         "qs": "6.11.2",
+        "socket.io": "4.7.2",
         "swagger-ui-express": "5.0.0",
         "uuid": "9.0.1",
         "xss": "^1.0.14",
